﻿FIXES
IMPROVEMENTS
- Apply/de-apply the intake hack when toggling the option in the settings.
ADDED/REMOVED/CHANGED SETTINGS VALUES

v1.4.13.0
FIXES
- Tournaments:
	- Fix some typos and bugs in assist counting in the local tournament parser.
	- Clear rocket dictionaries between heats. Compute assists under the same conditions for local and remote tournaments.
	- Cause a spawn failure instead of throwing an exception so that tournaments can retry spawning.
- Craft/Battle Damage:
	- Fix SelfSealingTanks being addable to engines.
	- Fix SelfSealingTanks not showing on/off status on load.
	- Fix SelfSealingTanks not respecting symmetry.
	- Re-add ModuleSelfSealingTank to Cockpits (for armored cockpits).
	- Fix fires not extinguishing if fuel < 0.
	- Fix engine fire behavior, now capped to max one fire at a time.
	- Fix Steel parts gaining more than the 1.75x HP they should be getting.
	- Fix fire generation on subsystem damage.
	- Fixes non-fueltank fires not burning out and extinguishing after a period of time.
	- Fix inert tanks not catching all possible sources of fire generation.
	- Fix invalid cast and NRE for modular missiles.
- AI:
	- Fix AI aim offset being offset.
	- Only extend when a bomb is selected once extending is requested.
	- Activate only the current mode of multi-modal engines.
	- Release pilot AI from attack command if they have a target within gun range (fixes bug with very long-range guns not engaging targets at competition start), regardless of whether RWP toggle is on.
- General:
	- Fix Paintball decals not appearing in paintball Mode.
	- Fix AIR-2 Genie cost.
	- Fix Explosions/Nukes not damaging buildings.
	- Fix RESET_ARMOR resetting hull material.
	- Fix Audio cutting out when firing lasers using looping SFX.
	- Fix for KerbalSafety sometimes being given the KerbalSeat instead of the KerbalEVA as the part.
IMPROVEMENTS
- Internal:
	- Allow BDGUIComboBox to be relocated/resized.